[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/level/audio_settings.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/theme_main.tres" type="Theme" id=2]
[ext_resource path="res://sprites/logo.png" type="Texture" id=3]
[ext_resource path="res://sounds/snd_ui_press.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/snd_ui_hover.ogg" type="AudioStream" id=5]
[ext_resource path="res://scripts/level/level_script.gd" type="Script" id=6]
[ext_resource path="res://scripts/level/fade.gd" type="Script" id=7]
[ext_resource path="res://scripts/story/chapter.gd" type="Script" id=8]

[node name="LevelMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 2 )

[node name="Logo" type="TextureRect" parent="."]
anchor_left = 0.292
anchor_top = 0.081
anchor_right = 0.708
anchor_bottom = 0.378
margin_left = -0.160019
margin_top = 0.129999
margin_right = 0.160004
margin_bottom = -0.0600052
texture = ExtResource( 3 )

[node name="LevelScript" type="Node" parent="."]
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.35
anchor_top = 0.461
anchor_right = 0.651
anchor_bottom = 0.87
margin_left = -1.52588e-05
margin_top = 0.529991
margin_right = 0.519989
margin_bottom = 0.0999756

[node name="BtnNewGame" type="Button" parent="VBoxContainer"]
margin_right = 145.0
margin_bottom = 28.0
focus_mode = 0
size_flags_vertical = 3
text = "UI_BTN_NEWGAME"

[node name="BtnQuit" type="Button" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 145.0
margin_bottom = 61.0
focus_mode = 0
size_flags_vertical = 3
text = "UI_BTN_QUIT"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 65.0
margin_right = 145.0
margin_bottom = 85.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 78.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "UI_SOUNDS"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 82.0
margin_right = 145.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = -72.0
max_value = 0.0
rounded = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 89.0
margin_right = 145.0
margin_bottom = 109.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 70.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "UI_MUSIC"

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 74.0
margin_right = 145.0
margin_bottom = 16.0
focus_mode = 0
size_flags_horizontal = 3
min_value = -72.0
max_value = 0.0
rounded = true

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="AudioSettings" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Fade" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Chapter" type="Node" parent="."]
script = ExtResource( 8 )

[connection signal="ready" from="." to="Fade" method="start_fade" flags=6 binds= [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), 0.5 ]]
[connection signal="mouse_entered" from="VBoxContainer/BtnNewGame" to="ButtonHover" method="play"]
[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="ButtonPress" method="play"]
[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="Fade" method="start_fade" flags=6 binds= [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), 1.0 ]]
[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="Timer" method="start" flags=6]
[connection signal="pressed" from="VBoxContainer/BtnNewGame" to="Chapter" method="set_chapter" flags=6 binds= [ 1 ]]
[connection signal="mouse_entered" from="VBoxContainer/BtnQuit" to="ButtonHover" method="play"]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="LevelScript" method="quit" flags=6]
[connection signal="pressed" from="VBoxContainer/BtnQuit" to="ButtonPress" method="play"]
[connection signal="drag_started" from="VBoxContainer/HBoxContainer/HSlider" to="ButtonPress" method="play"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer/HSlider" to="ButtonHover" method="play"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/HSlider" to="AudioSettings" method="set_sound"]
[connection signal="drag_started" from="VBoxContainer/HBoxContainer2/HSlider" to="ButtonPress" method="play"]
[connection signal="mouse_entered" from="VBoxContainer/HBoxContainer2/HSlider" to="ButtonHover" method="play"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/HSlider" to="AudioSettings" method="set_music"]
[connection signal="ready_music" from="AudioSettings" to="VBoxContainer/HBoxContainer2/HSlider" method="set_value"]
[connection signal="ready_sounds" from="AudioSettings" to="VBoxContainer/HBoxContainer/HSlider" method="set_value"]
[connection signal="timeout" from="Timer" to="LevelScript" method="go_to_level" flags=6 binds= [ "level_lobby" ]]
